# demo-stream

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  config.yaml  data-types.ts  data_types.py  pyproject.toml  run_demo.sh  type_definitions.py
client/: pyproject.toml  requirements.txt  robot_simulator.py
demo_types/: __init__.py
demo_types/registry/: __init__.py  data_types.py  file_patterns.py
src/demo_streamer/: data_types.py
